--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -238,15 +238,15 @@
                 text-align: center;
                 line-height: 1;
                 position: relative;
-                top:8.2vw;
+                top:9vw;
             }
             .Sections{
                 font-weight: bold;
-                font-size: 2.5vw;
+                font-size: 2.4vw;
                 color:#274E13;
                 font-family: 'Roboto';
                 line-height:.9;
-                top:5vw;
+                top:9vw;
                 position: relative;
             }
             ul{
@@ -261,7 +261,6 @@
                 font-size: 1.8vw;
                 font-family: Montserrat;
                 margin: 15px;
-                top:1.2vw;
                 padding-top:1.12vw;
             }
             .leaves{
@@ -285,15 +284,17 @@
             }
             .accul li{
                 color: #595984;
+                position:relative;
+                top: 7vw;
             }
             .column {
                 flex: 50%;
             }
             #mascot{
-                left:80%;
+                left:77%;
                 position: relative;
-                top:-3vw;
-                width:4vw;
+                top:-9vw;
+                width:7vw;
             }
             #copyright {
                 position: absolute;
@@ -665,7 +666,7 @@
                 </ul>
             </div>
         </div>
-        <img id = "mascot" src = /images/mascot.png">
+        <img id = "mascot" src = "/images/mascot.png">
         <div class="Footer">
             <h3>About</h3>
             <p>
