--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -522,7 +522,6 @@
                     display:flex;
                     flex-direction:column;
                     flex-wrap: wrap;
-                    max-width:100%;
                 }
                 .column{
                     width: 100vw;
@@ -532,7 +531,8 @@
                     display: none;
                 }
                 li{
-                    line-height:1.15
+                    line-height:1.15;
+                    font-size:0.95em;
                 }
                 #Header{
                     margin-top:0.6vw;
