--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -532,11 +532,35 @@
                 }
                 li{
                     line-height:1.15;
-                    font-size:0.95em;
+                    font-size:1.2em;
                 }
                 #Header{
                     margin-top:0.6vw;
                     margin-bottom:1vw;
+                }
+                ul{
+                    width:92%;
+                }
+                #Header a{
+                    line-height: .8;
+                    font-size: 1rem;
+                    max-width:15vw;
+                }
+                #Resources{
+                    font-size:1.5rem;
+                }
+                #Accomplishments{
+                    font-size:1.5rem;
+                }
+                .Sections{
+                    margin:0;
+                    font-size:1.34rem;
+                }
+            }
+            @media screen and (max-width: 740px) { 
+                li{
+                    font-size: 1em;
+                    line-height:1.1;
                 }
             }
             @media screen and (max-width: 690px) { 
