--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -522,6 +522,8 @@
                     display:flex;
                     flex-direction:column;
                     flex-wrap: wrap;
+                    position:relative;
+                    margin-top:-8rem;
                 }
                 .column{
                     width: 100vw;
@@ -531,8 +533,8 @@
                     display: none;
                 }
                 li{
-                    line-height:1.15;
-                    font-size:1.2em;
+                    line-height:1.18;
+                    font-size:1rem;
                 }
                 #Header{
                     margin-top:0.6vw;
@@ -543,14 +545,14 @@
                 }
                 #Header a, li{
                     line-height: .8;
-                    font-size: 1.5rem !important;
-                    max-width:15vw;
+                    font-size: 1rem !important;
                 }
                 #Resources{
                     font-size:1.5rem;
                 }
                 #Accomplishments{
                     font-size:1.5rem;
+                    top:12vw;
                 }
                 .Sections{
                     margin:0;
@@ -559,8 +561,8 @@
             }
             @media screen and (max-width: 740px) { 
                 li{
-                    font-size: 1em;
-                    line-height:1.1;
+                    font-size: .9rem;
+                    line-height:.9;
                 }
             }
             @media screen and (max-width: 690px) { 
