--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -524,6 +524,7 @@
                     flex-wrap: wrap;
                     position:relative;
                     margin-top:-8rem;
+                    top:18vw;
                 }
                 .column{
                     width: 100vw;
@@ -562,7 +563,9 @@
             @media screen and (max-width: 740px) { 
                 li{
                     font-size: .9rem;
-                    line-height:.9;
+                    line-height:1;
+                    margin:0;
+                    padding:0;
                 }
             }
             @media screen and (max-width: 690px) { 
