--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -524,7 +524,7 @@
                     flex-wrap: wrap;
                     position:relative;
                     margin-top:-8rem;
-                    top:18vw;
+                    top:180px;
                 }
                 .column{
                     width: 100vw;
@@ -564,8 +564,10 @@
                 li{
                     font-size: .9rem;
                     line-height:1;
-                    margin:0;
-                    padding:0;
+                }
+                .row li{
+                    margin:2px;
+                    padding:5px;
                 }
             }
             @media screen and (max-width: 690px) { 
