--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -568,11 +568,13 @@
                     width:100%;
                     line-height:.95;
                 }
+                #Header{
+                    font-size:2.5rem;
+                }   
             }
             @media screen and (max-width: 740px) { 
                 li{
-                    font-size: .9rem;
-                    line-height:1;
+                    font-size: 1.05rem;
                 }
                 .row li{
                     margin:2px;
@@ -634,13 +636,16 @@
                 }
                 li{
                    font-size:.88rem;
-                    line-height:1.05;
+                    line-height:1.1;
                 }
             }
             @media screen and (max-width: 442px) { 
                 .CallToAction{
                     top:2131px;
                     line-height:2.4;
+                }
+                .Sections{
+                    top:30px;
                 }
             }
             @media screen and (max-width: 376px){
