--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -519,6 +519,7 @@
             
             @media screen and (max-width: 890px){
                 .row{
+                    position:relative !important;
                     display:flex;
                     flex-direction:column;
                     flex-wrap: wrap;
@@ -546,7 +547,7 @@
                 }
                 #Header a, li{
                     line-height: .8;
-                    font-size: .9rem !important;
+                    font-size: .9rem;
                 }
                 #Resources{
                     font-size:1.5rem;
@@ -582,7 +583,8 @@
                 }
                 #LinkList{
                     text-overflow: ellipsis;
-                    font-size:.85rem;
+                    font-size:.82rem;
+                    
                 }
             }
             @media screen and (max-width: 690px) { 
@@ -646,6 +648,9 @@
                 }
                 .Sections{
                     top:30px;
+                }
+                #Accomplishments{
+                    top:160px !important;
                 }
             }
             @media screen and (max-width: 376px){
