--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -583,6 +583,7 @@
                 }
                 #LinkList{
                     text-overflow: ellipsis;
+                    overflow:hidden;
                     font-size:.82rem;
                     
                 }
