--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -346,7 +346,7 @@
             .ArrowOnRight{
                 left: 76%;
             }
-            #horizline, .LeftLine, .RightLine{
+            .LeftLine, .RightLine{
                 position: absolute;
                 top: 238.5vw;
                 height: 2px;
@@ -476,9 +476,6 @@
                 }   
             }       
             @media screen and (max-width:1070px){
-                #horizline{
-                    top:2237px;
-                }
                 .CallToAction{
                     top:2160px;
                     font-size:23px;
@@ -777,7 +774,6 @@
             </p>
         </div>
         <p class = "CallToAction">For sign-ups, social media, petitions and more:<br><i>Join us <a href = "https://linktr.ee/environmental_action_club" target="_blank">here</a></i></p>
-        <hr id = "horizline">
         <img class = "CallToAction ArrowOnLeft" src="/images/NewLeftArrow.svg">
         <img class = "CallToAction ArrowOnRight" src="/images/NewLeftArrow.svg">
         <hr class = "RightLine">
