--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -533,21 +533,21 @@
                 }
                 li{
                     line-height:1.18;
-                    font-size:1rem;
+                    font-size:1.2rem;
                 }
                 #Header{
                     margin-top:0.6vw;
-                    margin-bottom:1vw;
+                    margin-bottom:4vw;
                 }
                 ul{
                     width:92%;
                 }
                 #Header a, li{
-                    line-height: .8;
                     font-size: .9rem;
                 }
                 #Resources{
                     font-size:1.5rem;
+                    margin-bottom: 15px !important;
                 }
                 #Accomplishments{
                     font-size:1.5rem;
@@ -562,9 +562,9 @@
                     margin:0;
                     padding:0;
                     left:0;
-                    font-size:.9rem;
+                    font-size:1rem;
                     width:100%;
-                    line-height:.95;
+                    line-height:1;
                 }
                 #Header{
                     font-size:2.5rem;
@@ -572,7 +572,7 @@
             }
             @media screen and (max-width: 740px) { 
                 li{
-                    font-size: 1.05rem;
+                    font-size: 1.15rem;
                 }
                 .row li{
                     margin:2px;
@@ -635,7 +635,7 @@
                     font-size:19px;
                 }
                 li{
-                   font-size:.88rem;
+                   font-size:1rem;
                     line-height:1.1;
                 }
             }
