--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -469,7 +469,7 @@
                 }
                 #Header{
                     font-size:3.4rem;
-                    top:0;
+                    top:1rem;
                 }
                 #Header i{
                     display: none;
@@ -624,10 +624,6 @@
                 #FooterLogo{
                     width:60px;
                 }
-                #Header{
-                    font-size:3.15rem;
-                    top:-5vw;
-                }
                 .CallToAction{
                     font-size:19px;
                 }
@@ -643,6 +639,17 @@
                 }
                 .Sections{
                     top:30px;
+                }
+            }
+            @media screen and (max-width: 400px){
+                #Header{
+                    font-size:2rem;
+                }
+                #Accomplishments{
+                    top:179px !important;
+                }
+                .row{
+                    top:200px !important;
                 }
             }
             @media screen and (max-width: 376px){
