--- a/campaigns/index.html
+++ b/campaigns/index.html
@@ -718,7 +718,7 @@
                 <li><a href = "https://chng.it/wc6Qd8GN76" target="_blank">Support AB38, the Night Sky Bill</a></li>
                 <li><a href = "https://www.change.org/p/support-sb499-the-heat-mitigation-bill" target="_blank">Support SB499, the Heat Mitigation Bill</a></li>
                 <li><a href = "https://www.change.org/p/support-ab1423-to-ban-toxic-pfas-forever-chemicals?signed=true">Support AB1423 to ban toxic PFAS (Forever Chemicals)</a></li>
-                <li><a href = "https://www.ycats.org/our-campaign-against-artificial-turf-at-saratoga-high-school" target="_blank">Preventing Artificial Turf at SHS</a></li>
+                <li><a href = "https://docs.google.com/document/d/1k2RTGcKKlf1ooUPDeNNrRSenxMXIYuP1qE9lGXUUCPo/edit?usp=sharing" target="_blank">Preventing Artificial Turf at SHS</a></li>
             </ul>
         </div>
         <h2 id = "Accomplishments">Current Accomplishments</h2>
