--- a/contributors/index.html
+++ b/contributors/index.html
@@ -262,7 +262,7 @@
             #mascot{
                 left:77%;
                 position: relative;
-                top:-3vw;
+                top:3vw;
                 width:7vw;
                 display: initial;
             }
@@ -650,13 +650,13 @@
             </button>
         </form>
         <form>
-            <button class="BannerButtons ContributorsButton" formaction="https://shseac.org/contributors/">About Us
+            <button class="BannerButtons ContributorsButton" formaction="https://shseac.org/contributors/">Contributors
             </button>
         </form>
         <img class = "CustomLeaf LeafOne"/>
         <img class = "CustomLeaf LeafTwo"/>
         <img class = "CustomLeaf LeafThree"/>
-        <h1 id = "Header">Contributor Acknowledgements<<br><i style = "font-size:1.65vw">Commending our dedicated members and their contributions</i></h1>
+        <h1 id = "Header">Contributor<br>Acknowledgements<br><i style = "font-size:1.65vw">Commending our dedicated members<br>and their amazing contributions</i></h1>
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
         <img class = "spacer" src = /images/Leaves.svg">
