--- a/index.html
+++ b/index.html
@@ -150,13 +150,16 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                right: 28vw;
+                right: 40.5vw;
             }
             .CampaignsButton{
-                right: 15.5vw;
+                right: 28vw;
             }
             .AboutUsButton{
-                right: 3vw;
+                right: 15.5vw;
+            }
+            .ContributorsButton{
+                right: 3vw
             }
             .CustomLeaf{
                 content:url("images/CustomLeaf.png");
@@ -752,15 +755,19 @@
         </a>
         <img id = "referencePoint" src="images/CustomLeaf.png">
         <form>
-            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/articles/">Articles
+            <button class="BannerButtons ArticlesButton" formaction="https://shseac.org/articles/">Articles
             </button>
         </form>
         <form>
-            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/">Campaigns
+            <button class="BannerButtons CampaignsButton" formaction="https://shseac.org/campaigns/">Campaigns
             </button>
         </form>
         <form>
-            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">About Us
+            <button class="BannerButtons AboutUsButton" formaction="https://shseac.org/about-us/">About Us
+            </button>
+        </form>
+        <form>
+            <button class="BannerButtons ContributorsButton" formaction="https://shseac.org/contributors/">Contributors
             </button>
         </form>
         <img class = "CustomLeaf LeafOne"/>
