--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/contributors/" style="padding-left: 12%;">Contributors</a>
         </div>
         <a href="#" class="icon">
             <i class="fa fa-bars"></i>
