--- a/contributors/index.html
+++ b/contributors/index.html
@@ -188,17 +188,21 @@
             }
             #Header{
                 font-family: Montserrat;
-                font-size: 4.9vw;
+                font-size: 4.4vw;
                 font-weight: bold;
                 text-align: center;
                 position: relative;
                 top: -4.37vw;
             }
             #Header i{
-                line-height: .76;
                 font-weight: normal;
-                max-width:2.8vw;
-                top:-1.1vw;
+                max-width: 73vw;
+                top: 2vw;
+                display: block;
+                text-align: center;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                position: relative;
             }
             #Header a{
                 line-height: .8;
