--- a/contributors/index.html
+++ b/contributors/index.html
@@ -139,7 +139,7 @@
                 cursor: pointer;
                 font-weight: bold;
                 z-index: 2;
-                word-wrap: break-word;
+                <!--word-wrap: break-word;-->
                 margin-right: 1.5vw;
                 width:11vw;
                 /*
@@ -335,12 +335,6 @@
             }
             .RightLine{
                 right:-4%;
-            }
-            .spacer{
-                position: relative;
-                width:100%;
-                height:5.91%;
-                visibility: hidden;
             }
             .articles{
                 position: relative;
@@ -664,7 +658,6 @@
         <h1 id = "Header">Contributor<br>Acknowledgements<br><i style = "font-size:1.55vw">Commending our dedicated members<br>and their amazing contributions</i></h1>
         <img class = "leaves one" src="/images/Leaves.svg">
         <img class = "leaves two" src="/images/Leaves.svg">
-        <img class = "spacer" src = /images/Leaves.svg">
         <div class="row">
             <div class="column">
                 <!--<h3 class = "Sections">Agendized a Moratorium</h3>-->
