--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 cursor: pointer;
                 font-weight: bold;
                 z-index: 2;
-                word-wrap: break-word;
+                <!--word-wrap: break-word;-->
                 margin-right: 1.5vw;
                 width:11vw;
                 /*
