--- a/contributors/index.html
+++ b/contributors/index.html
@@ -662,6 +662,8 @@
             <div class="column">
                 <!--<h3 class = "Sections">Agendized a Moratorium</h3>-->
                 <ul class = "accul">
+                    
+                    <li>Nicole Lee - we promise this wasn't by her request, her contributions have been extensive in every respect. </li>
                     <li>This subpage is under construction.</li>
                 </ul>
             </div>
