--- a/contributors/index.html
+++ b/contributors/index.html
@@ -662,9 +662,8 @@
             <div class="column">
                 <!--<h3 class = "Sections">Agendized a Moratorium</h3>-->
                 <ul class = "accul">
-                    
-                    <li>Nicole Lee - we promise this wasn't by her request, her contributions have been extensive in every respect. </li>
                     <li>This subpage is under construction.</li>
+                    <li>Nicole Lee<br>- We promise this commendation wasn't by her request, her contributions as president have been extensive and we would not have been able to achieve what we have without her. </li>
                 </ul>
             </div>
             <div class="column">
