--- a/about-us/index.html
+++ b/about-us/index.html
@@ -343,7 +343,8 @@
                 clear: both;
             }
             #Mentors{
-                margin-top:17.1vw;
+                margin-top:17.04vw;
+                margin-bottom:0;
                 font-family: Montserrat;
                 position:relative;
                 text-align:center;
@@ -356,8 +357,17 @@
                 position:relative;
                 text-align:center;
                 font-style: italic;
-                font-size:1.6vw;
-                line-height:1.37;
+                font-size:1.42vw;
+                line-height:1.3;
+            }
+            #PVSA{
+                font-family: Comfortaa;
+                position:relative;
+                text-align:center;
+                font-style: italic;
+                font-size:1.55vw;
+                line-height:1;
+                color: black;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -416,6 +426,9 @@
                     transform: translateX(-50%);
                     line-height:1.48;
                     top:2180px;
+                }
+                #PVSA{
+                    display: none;
                 }
                 .container{
                     width:100vw;
@@ -613,6 +626,7 @@
         <div class="clearfix"></div>
         <h2 id = "Mentors">OUR MENTORS!</h2>
         <p id = "MentorList">Susan Hinton<br>Sue Chow<br>LeAnne McAuliffe<br>Cynthia Fan<br>Pamela Bond</p>
+        <p id = "PVSA">P.S. Log your PVSA-certified <a href = https://docs.google.com/spreadsheets/d/1_ffjAJS4pSX4Y0MLB731RU4u4Sz8j6CGy3wKxlt20R4/edit>service hours</a> right <a href = "https://docs.google.com/forms/d/1PBbX-kU0VfBr2XQ55d1tNLx8n4pa7TqGuviOY6VeLiQ/viewform?edit_requested=true">here</a>!</p>
         <div class="Footer">
             <h3>About</h3>
             <p>
