--- a/about-us/index.html
+++ b/about-us/index.html
@@ -368,13 +368,14 @@
                 font-size:1.55vw;
                 line-height:1;
                 color: black;
+                font-weight:bold;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
                     display: none;
                 }
             }
-            @media screen and (max-width: 1070px) { 
+            @media screen and (max-width: 1100px) { 
                 .Footer, .Footer2{  
                     top:2410px;
                     font-size:14px;
@@ -413,7 +414,7 @@
                 }
                 #Mentors{
                     position:absolute;
-                    top:2155px;
+                    top:2145px;
                     font-size:2rem;
                     left:50%;
                     transform: translateX(-50%);
@@ -421,21 +422,24 @@
                 }
                 #MentorList{
                     position:absolute;
-                    font-size:1.3rem;
+                    font-size:1.2rem;
                     left:50%;
                     transform: translateX(-50%);
-                    line-height:1.48;
-                    top:2180px;
+                    line-height:1.28;
+                    top:2160px;
                 }
                 #PVSA{
-                    display: none;
+                    position:absolute;
+                    font-size:1.2rem;
+                    left:50%;
+                    transform: translateX(-50%);
+                    line-height:1.28;
+                    top:2280px;
                 }
                 .container{
                     width:100vw;
                     margin-top:100px;
                 }
-            }       
-            @media screen and (max-width: 1100px) { 
                 .leaves{
                     display: none;
                 }
