--- a/about-us/index.html
+++ b/about-us/index.html
@@ -369,6 +369,7 @@
                 line-height:1;
                 color: black;
                 font-weight:bold;
+                width:100vw;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
