--- a/about-us/index.html
+++ b/about-us/index.html
@@ -507,8 +507,13 @@
             }
             @media screen and (max-width: 544px) {
                 #MentorList{
-                    top:2200px;
-                    line-height:1.46;
+                    line-height:1.3;
+                }
+                #Mentors{
+                    width:100vw;
+                }
+                #PVSA{
+                    font-size:0.85rem;
                 }
             }
             @media screen and (max-width: 501px) { 
