--- a/contributors/index.html
+++ b/contributors/index.html
@@ -662,14 +662,13 @@
             <div class="column">
                 <!--<h3 class = "Sections">Agendized a Moratorium</h3>-->
                 <ul class = "accul">
-                    <li>This subpage is under construction.</li>
-                    <li>Nicole Lee<br>- We promise this commendation wasn't by her request, her contributions as president have been extensive and we would not have been able to achieve what we have without her. </li>
+                    <li>Nicole Lee<br>- We promise this commendation wasn't by her request; her contributions as president have been extensive and we would not have been able to achieve what we have without her. </li>
                 </ul>
             </div>
             <div class="column">
                 <!--h3 class = "Sections">Passed an ordinance</h3>-->
                 <ul class = "accul">
-                    <li>This subpage is under construction.<!li>
+                    <li>The Sierra Club<br>- The Sierra Club has collaborated with us from the start on our journey for positive environmental action. Their assistance has always been infinitely invaluable. <!li>
                 </ul>
             </div>
         </div>
