--- a/about-us/index.html
+++ b/about-us/index.html
@@ -634,8 +634,8 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <h2 id = "Mentors">OUR MENTORS!</h2>
-        <p id = "MentorList">Susan Hinton<br>Sue Chow<br>LeAnne McAuliffe<br>Cynthia Fan<br>Pamela Bond</p>
+        <h2 id = "Mentors">Collaborations</h2>
+        <p id = "MentorList">Sierra Club Loma Prieta Chapter<br>Santa Clara County Medical Association</p>
         <p id = "PVSA">P.S. Log your PVSA-certified <a href = https://docs.google.com/spreadsheets/d/1_ffjAJS4pSX4Y0MLB731RU4u4Sz8j6CGy3wKxlt20R4/edit>service hours</a> right <a href = "https://docs.google.com/forms/d/1PBbX-kU0VfBr2XQ55d1tNLx8n4pa7TqGuviOY6VeLiQ/viewform?edit_requested=true">here</a>!</p>
         <div class="Footer">
             <h3>About</h3>
