--- a/about-us/index.html
+++ b/about-us/index.html
@@ -637,7 +637,7 @@
         <div class="clearfix"></div>
         <h2 id = "Mentors">Collaborations</h2>
         <p id = "MentorList">Sierra Club Loma Prieta Chapter<br><br>Santa Clara County Medical Association</p>
-        <p id = "PVSA"><br><br><br><br>P.S. Members, log your PVSA-certified community service hours <a href = "https://docs.google.com/forms/d/1PBbX-kU0VfBr2XQ55d1tNLx8n4pa7TqGuviOY6VeLiQ/viewform?edit_requested=true">here</a></p>
+        <p id = "PVSA"><br><br><br>P.S. Members, log your PVSA-certified community service hours <a href = "https://docs.google.com/forms/d/1PBbX-kU0VfBr2XQ55d1tNLx8n4pa7TqGuviOY6VeLiQ/viewform?edit_requested=true">here</a></p>
         <div class="Footer">
             <h3>About</h3>
             <p>
